[gd_scene load_steps=3 format=3 uid="uid://d0i47ffkqutnd"]

[ext_resource type="Script" uid="uid://bv1wla6gvb38d" path="res://Codebase/Zombie/zombie_spawn_point.gd" id="1_1ujm0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1ujm0"]
radius = 5.0

[node name="zombie_spawn_point" type="Node3D"]
script = ExtResource("1_1ujm0")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_1ujm0")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
